--- a/Riverpod 3 Upgrades/005-Ref.mounted.md
+++ b/Riverpod 3 Upgrades/005-Ref.mounted.md
@@ -1,4 +1,4 @@
-### ميزة Ref.mounted
+### Ref.mounted
 
 ميزة جديدة في Riverpod 3.0.
  الفكرة إنك تقدر تشيك إذا كان الـprovider لسه موجود (mounted) ولا لأ. 
@@ -28,3 +28,4 @@ if (ref.mounted) {
 - **تجنب الأخطاء**: لو الـprovider اتdispose (مثلاً بسبب AutoDispose لما مفيش widgets بتستخدمه)، ممكن تحصل أخطاء لو حاولت تستخدمه. `Ref.mounted` بيخليك تتأكد إن الـprovider لسه موجود قبل ما تعمل حاجة.
 - **تحكم أفضل**: الميزة دي بتديك تحكم أكتر في إدارة الـside-effects أو العمليات اللي بتعتمد على الـprovider، خصوصًا في التطبيقات المعقدة.
 - **مثال عملي**: لو عندك زر في الـUI بينفذ side-effect زي إضافة عنصر لقايمة، ممكن تستخدم `ref.mounted` عشان تتأكد إن الـprovider بتاع القايمة لسه موجود قبل ما تضيف العنصر.
+
